Make tests no longer need to be referenced from main project
Fixes a compilation warning about module not found