@@ -1,3 +1,5 @@
+import groovy.transform.Field
+
 plugins {
     id 'eclipse'
     id 'java-library'
@@ -32,9 +34,20 @@ extraJavaModuleInfo {
     automaticModule(libs.compile.testing, "compile.testing")
 }
 
+@Field
+static final List<String> JVM_ARGS_FOR_TESTS = List.of(
+        '--add-opens', 'net.minecraftforge.eventbus/net.minecraftforge.eventbus.internal=net.minecraftforge.eventbus.test',
+        '--add-exports', 'net.minecraftforge.eventbus/net.minecraftforge.eventbus.internal=net.minecraftforge.eventbus.test',
+)
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.addAll(JVM_ARGS_FOR_TESTS)
+}
+
 tasks.named('test', Test) {
     useJUnitPlatform()
-    systemProperties = ['eventbus.api.strictRuntimeChecks': true]
+    systemProperties = ['eventbus.api.strictRuntimeChecks': 'true']
+    jvmArgs JVM_ARGS_FOR_TESTS
 }
 
 tasks.register('testAll', AggregateTest) {
